# USD

./: CMakeLists.txt  README.md  README_buildingUSD.txt
cmake/defaults/: Options.cmake  Packages.cmake
cmake/macros/: Private.cmake
cmake/modules/: FindPySide.cmake
extras/usd/examples/usdSchemaExamples/: plugInfo.json
pxr/imaging/lib/glf/: plugInfo.json
pxr/imaging/lib/hd/: plugInfo.json  renderContextCaps.cpp
pxr/imaging/lib/hdx/: plugInfo.json
pxr/imaging/lib/hf/: pluginRegistry.cpp
pxr/imaging/plugin/: CMakeLists.txt
pxr/imaging/plugin/hdEmbree/: mesh.cpp
pxr/imaging/plugin/hdOSPRay/: CMakeLists.txt  README.md  api.h  config.cpp  config.h  context.h  instancer.cpp  instancer.h  material.cpp  material.h  mesh.cpp  mesh.h  meshSamplers.cpp  meshSamplers.h  overview.dox  renderDelegate.cpp  renderDelegate.h  renderParam.h  renderPass.cpp  renderPass.h  rendererPlugin.cpp  rendererPlugin.h  sampler.cpp  sampler.h  texture.cpp  texture.h
pxr/imaging/plugin/hdOSPRay/cmake/: FindOpenImageDenoise.cmake
pxr/imaging/plugin/hdOSPRay/testenv/: testHdOSPRay.cpp
pxr/imaging/plugin/hdStream/: plugInfo.json
pxr/usd/lib/ar/: plugInfo.json
pxr/usd/lib/sdf/: plugInfo.json
pxr/usd/lib/usd/: plugInfo.json
pxr/usd/lib/usdGeom/: plugInfo.json
pxr/usd/lib/usdHydra/: plugInfo.json
pxr/usd/lib/usdLux/: plugInfo.json
pxr/usd/lib/usdRi/: plugInfo.json
pxr/usd/lib/usdShade/: plugInfo.json
pxr/usd/lib/usdSkel/: plugInfo.json
pxr/usd/lib/usdUI/: plugInfo.json
pxr/usdImaging/lib/usdImaging/: plugInfo.json
pxr/usdImaging/lib/usdImagingGL/: hdEngine.cpp
pxr/usdImaging/lib/usdviewq/: mainWindow.py  stageView.py
